--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="قران.css">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4364922964369747"
+     crossorigin="anonymous"></script>
   <title>ديننا</title>
 </head>
 
